Fixes fdo#64237 by modifying the underlyning string

Change-Id: I7d387e40464b53a55524bf950b8d413cf8468376
Reviewed-on: https://gerrit.libreoffice.org/3870
Tested-by: Miklos Vajna <vmiklos@suse.cz>
Reviewed-by: Miklos Vajna <vmiklos@suse.cz>